# ASCII-Shaders

./: .gitignore  ASCII.fx  README.md
GLSL/: ascii.glsl  ascii_shader.glsl  ascii_texture_generator.pde  ascii_video_generator.pde
GLSL/data/: ascii_shader.glsl
HLSL/: Preset.ini
HLSL/includes/: Common.fxh
Processor/: Cargo.toml  README.md  settings_examples.json  settings_template.json
Processor/src/: ascii_converter.rs  main.rs
Script/: index.html  script.js  style.css
ShaderProcessor/: .gitignore  CMakeLists.txt
ShaderProcessor/include/: image_processor.h  shader.h  stb_image_wrapper.h  texture.h
ShaderProcessor/include/glad/: glad.h
ShaderProcessor/shaders/: ascii_compute.glsl  ascii_fallback.glsl  fragment.glsl
ShaderProcessor/src/: glad.c  image_processor.cpp  main.cpp  shader.cpp  texture.cpp
